--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
     },
     "scripts": {
         "auto-scripts": {
+            "composer update":"symfony-cmd",
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
